<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yodo mobile location based services application</string>
    <string name="desc">desc</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- header data text -->
    <string name="account">Account:</string>
    <string name="date">Date:</string>
    <string name="balance">Balance:</string>
    <string name="version">Version:</string>
    <string name="actual_version">1.3.3</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="action_forgot_pip">Forgot PIP?</string>
    <string name="exit">Exit</string>

    <!-- Progress Dialog Messages -->
    <string name="sks_message">Generating SKS code</string>
    <string name="balance_message">Getting balance</string>
    <string name="auth_message">Authenticating the user</string>
    <string name="change_pip_message">Changing the PIP</string>
    <string name="receipt_message">Getting receipt</string>
    <string name="biometric_message">Getting biometric token</string>
    <string name="linking_code_message">Getting linking code</string>
    <string name="linking_acc_message">Linking the accounts</string>
    <string name="loading">Loading &#x2026;</string>

    <!-- Messages Text -->
    <string name="no_wifi">You must turn on your wifi first</string>
    <string name="no_hdw">You must turn on your wifi or bluetooth first</string>
    <string name="start_biometric">Press the screen when you are ready</string>
    <string name="error">This is embarrassing! An error occurred in the process</string>
    <string name="no_internet">Internet access required</string>
    <string name="show_pass">Show PIP</string>
    <string name="input_pip">Personal Identification Phrase (PIP)</string>
    <string name="pip_length_short">PIP must be more than 3 digits</string>
    <string name="pip_confirm_diff">The PIP does not match</string>
    <string name="wrong_pip">Incorrect PIP</string>
    <string name="balance_succesfull">Balance obtained correctly</string>
    <string name="change_pip_succesfull">PIP successfully changed</string>
    <string name="not_available">This feature is not available yet</string>
    <string name="connected">Connected</string>
    <string name="null_response">Null Response</string>
    <string name="no_camera">No camera available</string>
    <string name="no_biometric">Please, select a biometric token first</string>
    <string name="not_support_bt">No Bluetooth support. Device cannot use all Yodo services</string>
    <string name="merch_found">A message from</string>
    <string name="save_image">Save Coupon?</string>
    <string name="image_saved_ok">Coupon saved successfully</string>
    <string name="image_saved_failed">Error saving Coupon</string>
    <string name="token_defined">Token Already Defined</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="change_successfull">Change completed successfully</string>
    <string name="copied_text">Text has been copied to clipboard</string>

    <!-- configurations -->
    <string name="configuration_title">Configuration</string>
    <string name="options">Options</string>
    <string name="tools">Tools</string>
    <string name="get_balance">Get Balance</string>
    <string name="reset_pip">Reset PIP</string>
    <string name="set_biometric">Set Biometric</string>
    <string name="saved_receipts">Receipts</string>
    <string name="link">Links</string>
    <string name="pair">Pair</string>
    <string name="get_advertising">Get Advertising</string>
    <string name="close_account">Close Account</string>
    <string name="change_language">Languages</string>
    <string name="language">Language:</string>

    <!-- Receipts -->
    <string name="recipts_title">Receipts</string>
    <string name="paid">Total:</string>
    <string name="receipt_auth">AU#</string>
    <string name="cash_tender">Cash Tender:</string>
    <string name="cash_back">Cash Back:</string>
    <string name="yodo_balance">Yodo Balance:</string>
    <string name="saved_receipt">Receipt Saved</string>
    <string name="no_transaction">No receipt available</string>

    <!-- Coupons -->
    <string name="coupons_title">Coupons</string>
    <string name="coupons_refresh">Refresh</string>

    <!-- Advertising -->
    <string name="no_bluetooth">No Bluetooth support. Device can not use all Yodo services</string>
    <string name="no_devices">No merchants within range</string>

    <!-- Change PIP -->
    <string name="current_pip">Current PIP:</string>
    <string name="new_pip">New PIP:</string>
    <string name="confirm_pip">Confirm New PIP:</string>
    <string name="current_pip_hint">PIP</string>
    <string name="new_pip_hint">New PIP (4–8 characters)</string>
    <string name="confirm_pip_hint">Confirm</string>
    <string name="forgot_pip">FORGOT PIP?</string>

    <!-- Eula -->
    <string name="eula_title">Yodo User Agreement</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>

    <!-- Registration Messages -->
    <string name="registration">Registration</string>
    <string name="register_pip">Enter your secret PIP in both spaces (4–8 characters)</string>
    <string name="pip_hint">PIP</string>
    <string name="next">Next</string>
    <string name="registering_user_pip">Registering PIP</string>

    <!-- Biometric Messages -->
    <string name="finish_register">Register</string>
    <string name="biometric">Choose your biometric token</string>
    <string name="registering_user_biometric">Registering Biometric Token</string>
    <string name="voice_recognition">Speech Recognition</string>
    <string name="face_recognition">Face Recognition</string>
    <string name="saved_face">Face successfully saved</string>
    <string name="face_explanation">Yodo does not collect an image of your face, only a numeric token representating your face. This allows you to reset your PIP if forgotten while still remaining completely anonymous. Press the icon above to get started.</string>
    
    <!-- Linking Account Messages -->
    <string name="linking_menu">Select one option: </string>
    <string name="link_account_text">Input your linking code: </string>
    <string name="link_code_text">Linking Code: </string>
    <string name="link_account_button">Link Account</string>
    <string name="generate_code_button">Generate Code</string>
    <string name="link_account_response">Linking Account</string>
    <string name="no_linked_account">This account is not linked</string>

    <!-- Tutorial Instructions -->
    <string name="instructions_title">Tutorial</string>
    <string name="instructions_message">Press the Yodo icon to show or hide the menu</string>

    <!-- Close Message -->
    <string name="close_message">WARNING: If your account has a positive balance it will be forfeited if you close your account now. Only enter your PIP to proceed if you are prepared to forfeit this funds</string>
    <string name="closing_message">Closing the account</string>
    <string name="farewell_message_tittle">Thank-you for using Yodo</string>
    <string name="farewell_message">Please completely remove the Yodo App using the App Management tools under phone Settings</string>
    
    <!-- Activities Titles -->
	<string name="title_activity_yodo_payment">Yodo Payment</string>
	<string name="title_activity_yodo_reset_pip">Yodo Reset PIP</string>
	<string name="title_activity_yodo_receipts">Yodo Receipts</string>
	<string name="title_activity_yodo_coupons">Yodo Coupons</string>
	<string name="title_activity_yodo_linking">Yodo Linking</string>
	<string name="title_activity_yodo_registration">Yodo Registration</string>
	<string name="title_activity_yodo_biometric">Yodo Biometric</string>
	<string name="title_activity_yodo_camera">Yodo Camera</string>
	
	<!-- Linking Account Types -->
	<string name="account_yodo">0</string>
	<string name="account_visa_credit">1</string>
	<string name="account_public_transit_pass">2</string>
	<string name="account_yodo_heart">3</string>
	<string name="account_visa_prepaid">4</string>
	<string name="account_paypal">5</string>
	
</resources>