<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/navigationScroll"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_gravity="start">

    <LinearLayout
        android:id="@+id/panelLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/yodopay_logo"
            android:contentDescription="@string/desc"/>

        <Button
            style="@style/MenuButton"
            android:drawableLeft="@drawable/settings"
            android:drawableStart="@drawable/settings"
            android:text="@string/reset_pip"
            android:onClick="resetPipClick"/>

        <Button
            style="@style/MenuButton"
            android:drawableLeft="@drawable/saved_receipts"
            android:drawableStart="@drawable/saved_receipts"
            android:text="@string/saved_receipts"
            android:onClick="savedReceiptsClick" />

        <Button
            style="@style/MenuButton"
            android:drawableLeft="@drawable/link_accounts"
            android:drawableStart="@drawable/link_accounts"
            android:text="@string/link_accounts"
            android:onClick="linkAccountsClick" />

        <View style="@style/SeparatorView" />

        <TextView
            style="@style/MenuText"
            android:text="@string/tools" />

        <Button
            style="@style/MenuButton"
            android:drawableLeft="@drawable/get_balance"
            android:drawableStart="@drawable/get_balance"
            android:text="@string/get_balance"
            android:onClick="balanceClick" />

        <Button
            style="@style/MenuButton"
            android:drawableLeft="@drawable/close_account"
            android:drawableStart="@drawable/close_account"
            android:text="@string/close_account"
            android:onClick="closeAccountClick"/>

    </LinearLayout>
</ScrollView>
