<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    
    <LinearLayout
        android:id="@+id/updatePipButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2" >
        
        <Button
	        style="@style/ButtonText"
	        android:background="@drawable/red_button"
	        android:layout_weight="1"
	        android:text="@string/reset_pip"
	        android:onClick="updatePipClick" />
        
        <Button
	        style="@style/ButtonText"
	        android:background="@drawable/black_button"
	        android:layout_weight="1"
	        android:text="@string/action_forgot_pip"
	        android:onClick="forgotPipClick" />
         
    </LinearLayout>

    <ScrollView
            android:id="@+id/scrollPipLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/updatePipButtons"
            android:layout_margin="10dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/current_pip"
                    android:textAppearance="?android:attr/textAppearanceLarge" >
            </TextView>

            <co.yodo.helper.ClearEditText
                    android:id="@+id/currentPipText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:maxLength="8"
                    android:text=""
                    android:hint="@string/current_pip_hint"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/new_pip"
                    android:textAppearance="?android:attr/textAppearanceLarge" >
            </TextView>

            <co.yodo.helper.ClearEditText
                    android:id="@+id/newPipText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:maxLength="8"
                    android:text=""
                    android:hint="@string/new_pip_hint"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/confirm_pip"
                    android:textAppearance="?android:attr/textAppearanceLarge" >
            </TextView>

            <co.yodo.helper.ClearEditText
                    android:id="@+id/confirmPipText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:inputType="textPassword"
                    android:maxLength="8"
                    android:text=""
                    android:hint="@string/confirm_pip_hint"/>

            <CheckBox
                    android:id="@+id/showPasswordCheckBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_pass"
                    android:onClick="showPressed" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>