<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/registration_layout"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:visibility="visible">

    <Button
        style="@style/ButtonText"
        android:background="@drawable/red_button"
        android:id="@+id/registerPipButton"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:onClick="registerPipClick" />

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_above="@+id/registerPipButton" >

        <LinearLayout
                android:id="@+id/register_information"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <TextView
                    android:id="@+id/registerPIPLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/register_pip"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            <co.yodo.helper.ClearEditText
                    android:id="@+id/pipText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="textPassword"
                    android:hint="@string/pip_hint"
                    android:maxLength="8" />

            <co.yodo.helper.ClearEditText
                    android:id="@+id/confirmationPipText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_pip_hint"
                    android:maxLength="8" />

            <CheckBox
                    android:id="@+id/showPasswordCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="showPressed"
                    android:text="@string/show_pass" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>