<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/registerBiometricLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/biometric"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        style="@style/ButtonText"
        android:background="@drawable/red_button"
        android:id="@+id/registerBiometricButton"
        android:text="@string/finish_register"
        android:layout_alignParentBottom="true"
        android:onClick="registerBiometricClick"/>

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_above="@+id/registerBiometricButton"
            android:layout_below="@+id/registerBiometricLabel" >

        <LinearLayout
                android:id="@+id/register_information"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

            <ImageView
                    android:id="@+id/voiceView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/voice_recognition"
                    android:onClick="voiceBiometricClicked"/>

            <TextView
                    android:id="@+id/voiceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_gravity="center"
                    android:text="@string/voice_recognition"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                    android:id="@+id/faceView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/face_icon"
                    android:onClick="faceBiometricClicked"/>

            <TextView
                    android:id="@+id/faceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/face_recognition"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>