<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ResetPIPActivity">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.ResetPIPActivity" >

        <LinearLayout
            android:id="@+id/updatePipButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                style="@style/ResetButton"
                android:id="@+id/bResetPip"
                android:background="@drawable/flat_selector_red"
                android:text="@string/reset_pip"
                android:onClick="resetPipClick" />

            <Button
                style="@style/ResetButton"
                android:id="@+id/bForgotPip"
                android:background="@drawable/flat_selector_grey"
                android:text="@string/forgot_pip"
                android:onClick="forgotPipClick" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/RegistrationGeneral"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/register_pip"/>

            <android.support.design.widget.TextInputLayout
                style="@style/RegistrationInfo"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true" >

                <android.support.design.widget.TextInputEditText
                    style="@style/PIPInput"
                    android:id="@+id/etNewPip"
                    android:hint="@string/new_pip" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/RegistrationInfo"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true" >

                <android.support.design.widget.TextInputEditText
                    style="@style/PIPInput"
                    android:id="@+id/etConfirmPip"
                    android:hint="@string/confirm_pip" />

            </android.support.design.widget.TextInputLayout>

            <!--
            <CheckBox
                android:id="@+id/cbShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_pass"
                android:onClick="showPasswordClick" />
            -->

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>